--- a/main.css
+++ b/main.css
@@ -15,3 +15,24 @@ form{
 	display: block;
 	border: 2px solid #bfbfbf; 
 }
+ul{
+	display: inline-block;
+	list-style-type: none;
+}
+#mob-name{
+	
+	color: #bfbfbf;
+}
+
+#mob-desc{
+ position: absolute;
+ bottom: 5px;
+
+}
+#mob-img{
+	border: 1px solid #212121;
+	padding:20px 800px 20px 10px;
+	height: 150px;
+	width: 150px;
+	position: relative;
+}
